--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,11 @@ test:
   database: playfootball_test
 
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 10
+  timeout: 10000
+  port: 5432
   username: db-playfootball-prod
   password: AVNS_spgy59sP2u5cZBkaP3t
   host     : app-766efa18-60be-43a1-9294-61d04776b54f-do-user-12551161-0.b.db.ondigitalocean.com
