--- a/config/database.yml
+++ b/config/database.yml
@@ -15,12 +15,13 @@ test:
   database: playfootball_test
 
 production:
-  adapter: postgresql
-  pool: 10
-  timeout: 10000
-  username: doadmin
-  password: AVNS_lGioRqOLD1a4wXulRAN
-  host: db-postgresql-fra1-88312-do-user-12551161-0.b.db.ondigitalocean.com
-  port: 25060
-  database: defaultdb
-  sslmode: require
+  <<: *default
+  # adapter: postgresql
+  # pool: 10
+  # timeout: 10000
+  # username: doadmin
+  # password: AVNS_lGioRqOLD1a4wXulRAN
+  # host: db-postgresql-fra1-88312-do-user-12551161-0.b.db.ondigitalocean.com
+  # port: 25060
+  # database: defaultdb
+  # sslmode: require
